# hackathon-ai-learning

./: .gitignore  README.md  package-lock.json
.github/workflows/: azure-static-web-apps-blue-sand-0d701e30f.yml  main_pathfinder-agents.yml
PathfinderAI/: AGENTS.md  PathfinderAI.slnx  pathfinderai-mvp.openapi.yaml
PathfinderAI/.github/: copilot-instructions.md
PathfinderAI/PathfinderAI.Contracts/: PathfinderAI.Contracts.csproj  README.md
PathfinderAI/PathfinderAI.Contracts/Accounts/: AccountContracts.cs
PathfinderAI/PathfinderAI.Contracts/Analytics/: AnalyticsContracts.cs
PathfinderAI/PathfinderAI.Contracts/Assistant/: LearningAssistantContracts.cs
PathfinderAI/PathfinderAPI/: PathfinderAPI.csproj  PathfinderAPI.http  Program.cs  appsettings.json
PathfinderAI/PathfinderAPI.Tests/: AdaptiveLearningServiceTests.cs  PathfinderAPI.Tests.csproj
frontend_hackathon/: .env  AGENTS.md  README.md  index.html
pathfinder-ai-agents/: .env.example  .gitignore  AGENTS.md  README.md  azure.yaml  playground-notes.md  pyproject.toml  requirements.txt  template-comparison-snippy.md
pathfinder-ai-agents/infra/: README.md
pathfinder-ai-agents/prompts/: progress-coach.system.md  roadmap-planner.system.md
pathfinder-ai-agents/src/pathfinder_ai_agents/: agents.py  clients.py  config.py  contracts.py  learn_tools.py  learner_tools.py  main.py  observability.py  orchestrator.py  prompts.py  routes.py  tool_registry.py
pathfinder-ai-agents/tests/: test_async_tool_execution.py  test_learn_mcp_client.py  test_registry.py
scripts/: start-dev.sh  stop-dev.sh
(+35 files in other folders)
