[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "pathfinder-ai-agents"
version = "0.1.0"
description = "PathfinderAI multi-agent backend scaffold for Microsoft Foundry SDK 2.x."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
  { name = "PathfinderAI Team" }
]
dependencies = [
  "azure-monitor-opentelemetry>=1.6.0,<2.0.0",
  "fastapi>=0.115.0,<1.0.0",
  "gunicorn>=23.0.0,<24.0.0",
  "openai>=1.82.0,<2.0.0",
  "pydantic>=2.8.2,<3.0.0",
  "pydantic-settings>=2.4.0,<3.0.0",
  "uvicorn[standard]>=0.30.6,<1.0.0",
  "httpx>=0.27.0,<1.0.0"
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11.2,<2.0.0",
  "pytest>=8.3.2,<9.0.0",
  "ruff>=0.6.4,<1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pathfinder_ai_agents"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
strict_optional = true
pretty = true
